--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
       
     <title>Document</title>
-    <script src="./index.js"></script>
+    <script src="index.js"></script>
 </head>
 
 <body>
